log
Thu, Mar 20, 2025  6:36:35 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  8:58:23 PM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
exercises.c: In function 'copia_pila':
exercises.c:107:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
80747b4
Thu, Mar 20, 2025 10:06:38 PM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:104:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux = create_stack();
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
80c92d7
Thu, Mar 20, 2025 10:09:05 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:104:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux = create_stack();
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7925e8f
Thu, Mar 20, 2025 10:35:09 PM: 
 exercises.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 30/70
e9f0413
Thu, Mar 20, 2025 10:42:11 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 30/70
5d26f89
Thu, Mar 20, 2025 10:48:53 PM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:127:4: error: unknown type name 'stack'
    stack
    ^~~~~
exercises.c:128:12: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
    *pila = create_stack();
            ^~~~~~~~~~~~
exercises.c:134:15: error: passing argument 1 of 'push' from incompatible pointer type [-Werror=incompatible-pointer-types]
          push(pila, &cadena[i]);
               ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:138:18: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
          if (top(pila) == NULL)
                  ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *top(Stack *stack) { return first(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:142:14: error: passing argument 1 of 'pop' from incompatible pointer type [-Werror=incompatible-pointer-types]
          pop(pila);
              ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:17:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *pop(Stack *stack) { return popFront(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:146:12: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
    if (top(pila) == NULL)
            ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *top(Stack *stack) { return first(stack); }
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
4d3e44a
